# JetSetGo

./: .env  Agents.py  main.py  render.yaml  requirements.txt  requirments.txt  tools.py  vite.config.ts
backend/: Agents.py  README.md  keys.py  main.py  pyproject.toml  requirements.txt  run_server.py  task.py  tools.py
frontend/: .gitignore  index.html
frontend/src/: App.tsx
jetsetgo/: README.md  pyproject.toml
jetsetgo/src/jetsetgo/: crew.py  main.py
jetsetgo/src/jetsetgo/config/: agents.yaml  tasks.yaml
jetsetgo/src/jetsetgo/tools/: custom_tool.py
