[project]
name = "jetsetgo"
version = "0.1.0"
description = "JetSetGo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
jetsetgo = "jetsetgo.main:run"
run_crew = "jetsetgo.main:run"
train = "jetsetgo.main:train"
replay = "jetsetgo.main:replay"
test = "jetsetgo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
