[project]
name = "JetSetGo"
version = "0.1.0"
description = "AI Trip Planner using CrewAI and Gemini 1.5 Flash"
authors = [{ name = "Tanuj", email = "sainisab264319@gmail.com"}]
dependencies = [
    "crewai[tools]",
    "fastapi",
    "uvicorn",
    "python-dotenv",
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"